# Verdandi

./: .gitignore  ARCHITECTURE.md  DOMAIN_MAP.md  INTERFACE.md  LICENSE  MANIFEST.in  PHILOSOPHY.md  README.md  SYSTEM_VISION.md  VERDANDI_AUDIT.md  VERDANDI_MAP.md  VERDANDI_NAME.md  VERDANDI_REAUDIT.md  context_injector.py  conversation_logger.py  nervous_system.py  pyproject.toml  reactor.py
config/: heartbeat.yaml  verdandi-heartbeat.service
docs/: advanced-concepts.md  agi-architecture-patterns.md  ai-agent-integration.md  architecture.md  changelog-v0.2.0.md  circuit-breaker-pattern.md  configuration-reference.md  contributing.md  cross-platform-guide.md  health-score.md  heimdall-watchman.md  integration-guide.md  monitoring.md  nerve-hub-protocol.md  norse-mapping.md  performance-guide.md  quick-start.md  raspberry-pi-guide.md  roadmap.md  security.md  self-healing.md  state-machine.md  testing-guide.md  thread-safety.md  troubleshooting.md
heartbeat/: .heimdall_test  __init__.py  __main__.py  cli.py  config.py  core.py  language_enforcer.py  paths.py  prometheus.py  push_reward.py  reactor.py  runa-auto-continue-pulse.sh  runa_mood_arousal_system.py  runa_negative_system.py  runa_reward_system.py  signals.py  sjalfrefi-pulse.sh  sjalfrefi.py  thrymr-pulse.sh  thrymr.py  vordr-pulse.sh  vordr.py
research/: 01_openclaw_heartbeat_deep_dive.md  02_volmarr_writings_philosophy.md  03_agi_heartbeat_academic_research.md  04_agi_self_awareness_architectures.md  05_open_source_heartbeat_systems.md  06_freyja_wisdom_creation_and_emergence.md  13_rune_pattern_system.md  (+43 more)
(+32 files in other folders)
